...
    <string name="updatecard">Write Information</string>
    <!--Strings for Log in-->
    <string name="loginemailbanner">Please enter email:</string>
    <string name="loginemail">Email</string>
    <string name="loginpasswordbanner">Please enter password:</string>
    <string name="loginpassword">Password</string>
    <string name="enter">Log in</string>
    <string name="register">No account? Register now.</string>
    <!--Strings for Registration-->
    <string name="create_account">Create Account</string>
    <!--Strings for recieve qr -->
    <string name="qrscanbanner">Activate QR Scanner</string>
    <string name="qrscan">Activate Scanner</string>
    <!--Strings for send qr -->
    <string name="grbanner">Generate Code</string>
    <!--Strings for send NFC-->
    <string name="sendnotify">Touch to Send </string>
    <!--Strings for send interface-->
    <string name="sendbanner">Select A Sending Option:</string>
    <string name="nfcsend">NFC</string>
    <string name="qrsend">QR Code</string>
    <!--Strings for update interface-->
    <string name="update_account">Update Details</string>
    <!--Strings for receiver interface-->
    <string name="receiverbanner">Business Card Details:</string>
    <!--Strings for receive interface-->
    <string name="receivebanner">Select A Receiving Option:</string>
    <string name="nfcreceive">NFC</string>
    <string name="qrreceive">QR Scanner</string>
...
