...
                android:textColor="@color/white"
                android:text="@string/managecards"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"
                android:padding="@dimen/minpadding"
                android:drawableTop="@drawable/ic_manage_card"
                android:onClick="openManageCards"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
...
