...
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Full Name" />
        <!-- Name Label -->
        <EditText android:id="@+id/update_input_jobtitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textAutoCorrect|textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/lesspadding"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
...
