...
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/textsize"
                        android:textColor="@color/white"
                        android:drawableEnd="@drawable/ic_work_sort"
...
